# cpp-project-template

./: CMakeLists.txt
src/: CMakeLists.txt  dump.cpp  main.cpp
src/pre/xml/: from_xml.hpp  to_xml.hpp
src/pre/xml/detail/: generator.hpp  parser.hpp  sfinae_enabler.hpp
src/pre/xml/traits/: is_associative_container.hpp  is_boost_variant.hpp  is_container.hpp  is_string.hpp
src/user/: client.hpp  server.hpp
